--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+    </style>
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-light">
+  <body class="bg-light" >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
