--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Vite + React + TS</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+    
+      .footer {
+          position: fixed;
+          letter-spacing: 1px;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: rgb(111, 105, 105);
+          color: white;
+          text-align: center;
+      }
     </style>
   </head>
   <body class="bg-light"  >
